
name:                   music-pitch-literal
version:                1.9.2
author:                 Hans Hoglund
maintainer:             Hans Hoglund
license:                BSD3
license-file:           COPYING
synopsis:               DEPRECATED and merged into music-pitch
category:               Music
tested-with:            GHC
build-type:             Simple
cabal-version:          >= 1.10

description:
    DEPRECATED and merged into music-pitch

source-repository head
  type:             git
  location:         git://github.com/music-suite/music-pitch-literal.git

library
    build-depends:      base            >= 4        && < 5,
                        semigroups      >= 0.13.0.1 && < 1
    exposed-modules:    Music.Pitch.Literal
                        Music.Pitch.Literal.Pitch
                        Music.Pitch.Literal.Interval
                        Music.Pitch.Augmentable
                        Music.Pitch.Alterable
    hs-source-dirs:     src
    default-language:   Haskell2010
